--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
+# Compiled class file
+*.class
+
+# Server folder
+Servers
+Servers/*
+
+#RemoteSystemolder
+RemoteSystemsTempFiles
+RemoteSystemsTempFiles/*
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Maven Files
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -10,3 +42,5 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+/.metadata/
+/.recommenders/
