Adding Java Mail Api and Started Rest Api

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ Servers
 Servers/*
 
 #RemoteSystemolder
-RemoteSystemsTempFiles
-RemoteSystemsTempFiles/*
+#RemoteSystemsTempFiles
+#RemoteSystemsTempFiles/*
 
 # Log file
 *.log
