--- a/restApiDemo/pom.xml
+++ b/restApiDemo/pom.xml
@@ -11,17 +11,9 @@
 		<springframework.version>4.3.4.RELEASE</springframework.version>
 		<hibernate.version>5.2.5.Final</hibernate.version>
 		<mysql.connector.version>5.1.40</mysql.connector.version>
-		<jackson.version>2.5.3</jackson.version>
 	</properties>
 
 	<dependencies>
-
-		<!-- Jackson -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
 
 		<!-- Spring -->
 		<dependency>
@@ -94,11 +86,33 @@
 			<version>6.0.0.Final</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.5.3</version>
+			<version>2.8.8</version>
 		</dependency>
+
+		<!-- Java Mail -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 
 	</dependencies>
 
