--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Servers/*
 *.zip
 *.tar.gz
 *.rar
+*.dat
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
