--- a/todoApp/pom.xml
+++ b/todoApp/pom.xml
@@ -135,7 +135,7 @@
 		</dependency>
 
 		<!-- dependencies for google & fb connection -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>3.1.3.Final</version>
@@ -145,20 +145,18 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>jaxrs-api</artifactId>
 			<version>3.0.11.Final</version>
-		</dependency>
-
+		</dependency>-->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 			<version>3.1.3.Final</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>3.0.16.Final</version>
-		</dependency>
-
+		</dependency>-->
 
 	</dependencies>
 	<build>
