--- a/rabbitMQTest/pom.xml
+++ b/rabbitMQTest/pom.xml
@@ -22,11 +22,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Rabbit mq -->
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
 			<version>5.0.0</version>
 		</dependency>
+
+		<!-- slf4j implementation -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+
 
 	</dependencies>
 
