--- a/todoApp/pom.xml
+++ b/todoApp/pom.xml
@@ -135,28 +135,24 @@
 		</dependency>
 
 		<!-- dependencies for google & fb connection -->
-		<!-- <dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
-			<version>3.1.3.Final</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>jaxrs-api</artifactId>
-			<version>3.0.11.Final</version>
-		</dependency>-->
+		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jaxrs</artifactId> 
+			<version>3.1.3.Final</version> </dependency> <dependency> <groupId>org.jboss.resteasy</groupId> 
+			<artifactId>jaxrs-api</artifactId> <version>3.0.11.Final</version> </dependency> -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 			<version>3.1.3.Final</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jackson-provider</artifactId>
-			<version>3.0.16.Final</version>
-		</dependency>-->
+		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jackson-provider</artifactId> 
+			<version>3.0.16.Final</version> </dependency> -->
+
+		<!-- Rabbit MQ -->
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 	<build>
