--- a/todoApp/src/main/webapp/bower.json
+++ b/todoApp/src/main/webapp/bower.json
@@ -6,14 +6,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "^1.6.2",
+    "angular": "~1.6.6",
     "angular-animate": "1.x.x",
     "angular-mocks": "1.x.x",
     "angular-resource": "1.x.x",
-    "jquery": "^3.2.1",
-    "angular-ui-router": "^1.0.10",
-    "angular-password": "^1.0.3",
+    "jquery": "~3.x.x",
+    "angular-ui-router": "~1.x.x",
+    "angular-password": "~1.x.x",
     "angular-local-storage": "^0.7.1",
-    "angular-material": "^1.1.5"
+    "angular-material": "~1.x.x"
   }
 }
