--- a/todoApp/pom.xml
+++ b/todoApp/pom.xml
@@ -111,6 +111,13 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+		
+		<!-- For java 8 DateTime api conversions -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.6.5</version>
+		</dependency>
 
 		<!-- Java Mail -->
 		<dependency>
@@ -135,28 +142,17 @@
 		</dependency>
 
 		<!-- dependencies for google & fb connection -->
-		<!-- <dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
-			<version>3.1.3.Final</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>jaxrs-api</artifactId>
-			<version>3.0.11.Final</version>
-		</dependency>-->
+		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jaxrs</artifactId> 
+			<version>3.1.3.Final</version> </dependency> <dependency> <groupId>org.jboss.resteasy</groupId> 
+			<artifactId>jaxrs-api</artifactId> <version>3.0.11.Final</version> </dependency> -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 			<version>3.1.3.Final</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jackson-provider</artifactId>
-			<version>3.0.16.Final</version>
-		</dependency>-->
+		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jackson-provider</artifactId> 
+			<version>3.0.16.Final</version> </dependency> -->
 
 	</dependencies>
 	<build>
