--- a/todoApp/src/main/webapp/app/bower.json
+++ b/todoApp/src/main/webapp/app/bower.json
@@ -24,6 +24,11 @@
     "angular-resource": "1.5.x",
     "angular-sanitize": "1.5.x",
     "angular-toastr": "^2.1.1",
-    "angular-ui-router": "^1.0.10"
+    "angular-ui-router": "^1.0.10",
+    "ng-file-upload": "^12.2.13",
+    "angular": "^1.6.7",
+    "angular-base64-upload": "^0.1.23",
+    "angular-base64": "^2.0.5",
+    "ng-material-datetimepicker": "^1.9.6"
   }
 }
