--- a/todoApp/pom.xml
+++ b/todoApp/pom.xml
@@ -141,18 +141,18 @@
 			<version>2.10.3</version>
 		</dependency>
 
-		<!-- dependencies for google & fb connection -->
-		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jaxrs</artifactId> 
-			<version>3.1.3.Final</version> </dependency> <dependency> <groupId>org.jboss.resteasy</groupId> 
-			<artifactId>jaxrs-api</artifactId> <version>3.0.11.Final</version> </dependency> -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 			<version>3.1.3.Final</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jackson-provider</artifactId> 
-			<version>3.0.16.Final</version> </dependency> -->
+		<!-- JSOUP for Scraping -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.2</version>
+		</dependency>
 
 	</dependencies>
 	<build>
